CHATS_SIT/force-app/main/default/objects/sfrosit_t_job_search_hist__x/sfrosit_t_job_search_hist__x.object-meta.xml
<CustomObject>
    <description>sfrosit$t_job_search_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>sfrosit$t_job_search_hist</externalName>
    <label>Job Search History</label>
    <pluralLabel>Job Search History</pluralLabel>
</CustomObject>