CHATS_SIT/force-app/main/default/objects/sfrosit_t_job_search_hist__x/fields/cde_vrfyd__c.field-meta.xml
<CustomField>
    <fullName>cde_vrfyd__c</fullName>
    <description>cde_vrfyd</description>
    <externalDeveloperName>cde_vrfyd</externalDeveloperName>
    <label>Verified</label>
    <length>255</length>
    <type>Text</type>
</CustomField>