CHATS_SIT/force-app/main/default/objects/sfrosit_t_job_search_hist__x/fields/cde_vrfyd_source__c.field-meta.xml
<CustomField>
    <fullName>cde_vrfyd_source__c</fullName>
    <description>cde_vrfyd_source</description>
    <externalDeveloperName>cde_vrfyd_source</externalDeveloperName>
    <label>Verified Source</label>
    <length>3</length>
    <type>Text</type>
</CustomField>