CHATS_SIT/force-app/main/default/objects/sfrosit_t_job_search_hist__x/fields/dte_anniv__c.field-meta.xml
<CustomField>
    <fullName>dte_anniv__c</fullName>
    <description>dte_anniv</description>
    <externalDeveloperName>dte_anniv</externalDeveloperName>
    <label>Anniversary Date</label>
    <type>Date</type>
</CustomField>