CHATS_SIT/force-app/main/default/objects/sfrosit_t_job_search_hist__x/fields/dte_vrfyd__c.field-meta.xml
<CustomField>
    <fullName>dte_vrfyd__c</fullName>
    <description>dte_vrfyd</description>
    <externalDeveloperName>dte_vrfyd</externalDeveloperName>
    <label>Verified Date</label>
    <type>Date</type>
</CustomField>