CHATS_SIT/force-app/main/default/objects/sfrosit_t_job_search_hist__x/fields/idn_indiv_job_search__c.field-meta.xml
<CustomField>
    <fullName>idn_indiv_job_search__c</fullName>
    <description>idn_indiv_job_search</description>
    <externalDeveloperName>idn_indiv_job_search</externalDeveloperName>
    <label>Individual Job Search ID</label>
    <length>50</length>
    <referenceTargetField>T_JOB_SEARCH__c.IDN_EXTNL__c</referenceTargetField>
    <referenceTo>T_JOB_SEARCH__c</referenceTo>
    <relationshipLabel>Job Search Legacy History</relationshipLabel>
    <relationshipName>sfrosit_t_job_search_hist</relationshipName>
    <type>IndirectLookup</type>
</CustomField>