CHATS_SIT/force-app/main/default/objects/sfrosit_t_job_search_hist__x/fields/idn_indiv_job_search_hist__c.field-meta.xml
<CustomField>
    <fullName>idn_indiv_job_search_hist__c</fullName>
    <description>idn_indiv_job_search_hist</description>
    <externalDeveloperName>idn_indiv_job_search_hist</externalDeveloperName>
    <label>Individual Job Search Hist ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>